# kitty-cat-lock

./: .gitignore  CMakeLists.txt  changelog.md  componentz.json  configure  install-notes.md  license.md  readme.md
src/: Makefile  application.c  application.h  catlock  config.mk  helpers.c  helpers.h  main.c  main.h  metalock  polyfill.c  polyfill.h
src/calendar/: calendar.c  calendar.h  main.c  polyfill.h
src/util/: display.c  display.h  font.c  font.h  image.c  image.h  options.c  options.h
wallpaper/: copy.sh
